# meow

./: .gitignore  CMakeLists.txt  README.md
arch/i686/boot/: boot.S  gdt.S  paging.S
arch/i686/include/: stdint.h
arch/i686/include/meow/arch/: gdt.h  idt.h
arch/i686/kernel/: exception.S  exception.c  gdt.S  gdt.c  idt.S  idt.c  stopcpu.S
arch/i686/linker/: linker.lds
arch/x86_64/boot/: boot.S  gdt.S  paging.S
arch/x86_64/include/: stdint.h
arch/x86_64/include/meow/arch/: exception.h  gdt.h  idt.h
arch/x86_64/kernel/: exception.S  gdt.S  gdt.c  idt.S  idt.c  stopcpu.S
arch/x86_64/linker/: linker.lds
include/meow/: multiboot2.h  panic.h  tty.h
kernel/: main.c  panic.c  tty.c
